--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ header {
   align-items: center;
   justify-content: center;
   text-align: center;
+  padding-top:100px;
   padding-bottom: 300px;
   transition: all 0.5s ease;
 }
