--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ header {
     rgba(65, 85, 114, 0.1) 0%,
     rgba(65, 85, 114, 0) 100%
   );
-  animation-timing-function: linear;
+/*   animation-timing-function: linear; */
 }
 .a{
   scroll-behavior: smooth;
